--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
-  "name": "se_2016_memories",
+  "name": "se-memories",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cuid": "^2.1.6",
+    "emoji-mart": "^2.11.1",
+    "firebase": "^7.2.2",
+    "javascript-time-ago": "^2.0.3",
+    "md5": "^2.2.1",
     "react": "^16.11.0",
+    "react-cropper": "^1.3.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-dropzone": "^10.1.10",
+    "react-infinite-scroller": "^1.2.4",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.1"
   },
   "scripts": {
     "start": "react-scripts start",
