--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.11.0",
     "react-dropzone": "^10.1.10",
     "react-infinite-scroller": "^1.2.4",
+    "react-photo-gallery": "^8.0.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
