--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-dom": "^16.11.0",
     "react-dropzone": "^10.1.10",
     "react-infinite-scroller": "^1.2.4",
+    "react-photo-gallery": "^8.0.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-slideshow-image": "^1.3.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
