--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cuid": "^2.1.6",
     "emoji-mart": "^2.11.1",
+    "express": "^4.17.1",
     "firebase": "^7.2.2",
     "javascript-time-ago": "^2.0.3",
     "md5": "^2.2.1",
+    "mongoose": "^5.7.13",
+    "bcrypt": "^3.0.6",
     "react": "^16.11.0",
     "react-cropper": "^1.3.0",
     "react-dom": "^16.11.0",
